# kaleidoscope

./: .gitignore  CMakeLists.txt  compiler.cpp  external.cpp  jit.hpp  lexer.hpp  mandelbrot.kl  parser.hpp
examples/: fibo.kl
